--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^4.1.0",
     "@testing-library/user-event": "^14.6.1",
     "cra-template": "1.2.0",
     "postcss": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "tailwindcss": "^4.0.3",
     "web-vitals": "^4.2.4",
-    "zod": "^3.24.1",
+    "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "scripts": {
