--- a/quest-app/package.json
+++ b/quest-app/package.json
@@ -6,10 +6,12 @@
     "@hookform/resolvers": "^4.1.0",
     "@testing-library/user-event": "^14.6.1",
     "cra-template": "1.2.0",
+    "leaflet": "^1.9.4",
     "postcss": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "tailwindcss": "^4.0.3",
@@ -50,6 +52,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^22.10.10",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
